changes to longhorn

--- a/ansible/inventory/group_vars/worker/k3s.yml
+++ b/ansible/inventory/group_vars/worker/k3s.yml
@@ -9,5 +9,4 @@ k3s_control_node: false
 k3s_agent:
   node-ip: "{{ ansible_host }}"
   node-label:
-    - "node.longhorn.io/create-default-disk: 'config'"
-    - "node.longhorn.io/default-disks-config: '[ { path:/media/storage, allowScheduling:true, storageReserved:10485760 }]'"
+    - "node.longhorn.io/create-default-disk=config"
