--- a/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:mmAOEOSQ,iv:QGwXqzomna82TE+ZEPV5w1smNBKzJKvIir6M2+1qaRc=,tag:mOvpjkKfCF9jDbBz4mDeUA==,type:str]
-ansible_user: ENC[AES256_GCM,data:WIJS1QPx,iv:IvkCQlWbIfQHBUao2dZ1xCgCmI94OE7lE7aZvKfGl7Y=,tag:QaXjfBpcNn5ol5GUP7c55A==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:wga+gk04,iv:+WnrGlF2oFWZSy1yu7/BF1tSaNhOf6NFRGCTXvIbi/Y=,tag:bwN91C6GG13+22AKTCh0/w==,type:str]
+kind: ENC[AES256_GCM,data:au91Z5mn,iv:k5rWy3NQaJrSvloI/yRutrUT7SV1b4ZaiL2nGlBsVwQ=,tag:eAKLCFT1PodbMei7e8JBsg==,type:str]
+ansible_user: ENC[AES256_GCM,data:65JiPu0m,iv:/WvC3j/KGTme5cVGTQKzku3Gf9IFZN0BLeZmxRR+Zbs=,tag:UG1PyjGmqDysaqoY6J2awg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:gaCubpHJ,iv:sUtj1La/33ovBEQbRaPkQgmdMmoiQUEfhCjhmZUjQoI=,tag:3LxGz+K56OSgvxHaf2Q9Bg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTL3VadTdxSllvRXV6YjU3
-            djNGK2EvNWQxYmljWnZma29CRWRKdlE3SVNjCjVrZEdKNFVjMlU1Ky9OeEkzMTlL
-            UkNlRzZib0M0ZStnbjVBNUlFbURxTlEKLS0tIHp2N1ZkamU5VkVTYXcxUDdlZkcz
-            WTNpdTg1TENxTGVDVEFPUlJ1dlBWb28Kascx3awYlx2914nN8DEkHZdKm5L1T+Ux
-            SJnzs470iZC6Wo8ftBiWizXmmJbJMrVfd/fsGZwER7FkVekff+G14A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvSHoyNzVzSzFOTFpMUk0z
+            enlXZ2NRQjloQmZQbStwU1Q1MHNESXFWSHgwClo2Nno1cS8wM1VEMnBtRGYrNmhO
+            ckgvQmpVRWlkRlNKWFRqdndzcnoxNDgKLS0tIGFyVXFjQU45VmFoOUJHQ2F1MVhX
+            bktVai9JbktlRDhBZjM2VHFlT2hUajgKKCF2m5zLqS9iDlA2oOs2wI4pmGd0H+yP
+            +rg9DWE4u9sLuTee30Pk2cJbLKvnlwik4ncMuVJjBhfzpGCaKGG9Eg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-05T12:31:37Z"
-    mac: ENC[AES256_GCM,data:3Uay9vxnfRYGK7f/sMRlsHke9KCAJama6YmoxX6g092zmqip13W1YeJgUsAXKO46GmNugCXosZXZIxxdLLFZqovUJlSbwHzUSAoU7iUB//p8gyv42uMBa1pvKSV8lqD4R+eouvuy+SUMQPOssF5hJmTvfcUnJBEFgOXb1GBKVhU=,iv:WwNZ4mCCS+xL4n3m9DXUsswVJvJc994qg36kzr66teA=,tag:Z43EbRdqRLT5wmf3Uje2vg==,type:str]
+    lastmodified: "2023-02-05T20:25:07Z"
+    mac: ENC[AES256_GCM,data:MhH0my+bt2kEsdRgZHPM2OFv2ALfQr+2+kLO2YGqNBwmkM/ZDDnaOv4tgbbrpsEgJeWM7pI5JgrD19FJv+NmEt8o90rXW6aXtKMVn8DTiyJTR1udbQTVDeaowtuiEvhYOCQ8a8FYOdoPDbccZKdEbcDvpJlbA0oD6iAVZiejizM=,iv:2+oDxloqvrAwjL/lgU533PpnJpCXiXKA3AKuIkw8ZeY=,tag:OwjyizgUyWrgFliEOvqcRA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
