--- a/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:adP6j4FE,iv:qw79tdUBDHxVwueM4OFh+Mlvi10g8ogaT5TRXrB1hTI=,tag:FQcocanVk98ILuBeZVQgyg==,type:str]
-ansible_user: ENC[AES256_GCM,data:vue2ibNb,iv:AjHQ8BxJlFXh2xAI08DZG62ci6VHoUxTr3IDwGgKwQ0=,tag:QqElMO+U9Gs1y+QzVTifUA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:m0AWZsek,iv:hzuTvzPeVARQHpbpYgm7Wergqh1pAtf5ntXyKl/Uqns=,tag:cxKIYNvO1kdfGvcjM8jjrA==,type:str]
+kind: ENC[AES256_GCM,data:XUGvYEaX,iv:ANpX77UA0y3CbRoHFgzWEM9mzHpA6HVwpYuQhB+Riq0=,tag:h1sH8pFWb1W+J78Ds4ku9w==,type:str]
+ansible_user: ENC[AES256_GCM,data:F+ourj71,iv:fZtdD/8ogCH1Afw5OgCJXrMrH7WIGHFg6ZGfJKKh4Cs=,tag:uUbgBHnB48fkQZL0uzyZIg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:9wR9r1Ii,iv:xYFAU0NXKW/1otBQl2mreikwUE8tcBi46wso9wBRTnw=,tag:NIKnvBGU6kRwwEqQjzNyHQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrWVR3RVh6VzNhU0F3RGhC
-            Qmg3VEh1YmUxK2FPY0ZGZXNleVhXN09xLzM4CllNYWszUjVZN1JzQ05MR29Xakpt
-            a245S1F5YVhwNUJMNXlkN1pRY0JFaTQKLS0tIFgzQUlQempzN1R1OGt4QnFqUjBN
-            YVMza1dxRHdVYm5JWndsZkx1QXdpbkEKrHDMHF6BRgiHUCDnollXjmsyYYUl9Ft7
-            s4DMK3xJtKCcHDCYc1oRsgYrwfug81OZblkpxrL+VOgyO1OmreAlcg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjMXlHQzZyUitkZkZFNDJY
+            Zkh0eTZkVGFQVnBzQWZqdmIvMUYyamJVbXk4CnBIOEcwYU80K3RlbG91dVNsK1Q5
+            WGVSUCt0WVBpeGorMFpHb3JjT1BEMFkKLS0tIFk4R0RRSDR5N3FtK1g0SzE5MzBP
+            djZPaUJWa0VQOURGMWRQbW1lU0xWZEkKxdSAo4vNiNn8KzGpdjdvKcUBkwPcc/ff
+            Ztv8fV0rNMujJQwdZH8jn2al8B+8S/cHzCL3cKSItslre/CDlXf97A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-05T12:31:37Z"
-    mac: ENC[AES256_GCM,data:NpUve4jzcT2f5CGitf8Pj2bhSIg12mM3iKv0nJmoMdvrYzDfQ/YrGKM6Hy+Dh0Ba5mk7CzrINZp2byjpj6zRA5JwA3Y0Qr9xjEH+2YzBUIvfZcjJ6GM9GhwIuTOyZwMZqNPV8upCFtLAlhVO2IHaPN57bLrv7y/g7PN8TLzSqmU=,iv:y4yr7FodK6FuXDmVxgwn1+VvgDBu5XDFEB9jPVOLaYQ=,tag:Zib3GOBge+DoD729sgiONA==,type:str]
+    lastmodified: "2023-02-05T20:25:07Z"
+    mac: ENC[AES256_GCM,data:ttPgJhAW+XnOwiuklwo6w4h0PhCi0Hh7rylxGnh+2NCOzxRR16GKxf91ZugWmvIt+o7mXZzCqPuiADqcatCQX5dUp2jRWYeH7UhB93AsFGc5JhapfwlWu4aqd6aDD8+QomQ8rzkyw9cxwFgKaHsVGqZbkUfLibLRZepcJ+1pixE=,iv:f4zBx+7B5gtHWef3mBHS6NVU8bOAmh0s8BLbggpecaM=,tag:KZzWjNo56zfWmna0CdBOzA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
