--- a/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:+ZslM8A4,iv:0mAPWJoubT3Hd2Mrx9hX271qvVWZ9AiwXejqtfTQ0oU=,tag:2blDFlfY9pU+EgVTWQ/uJw==,type:str]
-ansible_user: ENC[AES256_GCM,data:9qJJypPL,iv:EqlVfoeR1YyPu8i8LGDsVEOOWbOubSLDXxr+Brk4Vzk=,tag:FHHyHHajsSKaRYY5USEZMQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:L9drf/GJ,iv:Nsc3d7uk4r1z3OsT2bmqhAqsY8vjALwUy1ItXzs2qHM=,tag:aMHcSHnd4AtS7hiaXY6VCg==,type:str]
+kind: ENC[AES256_GCM,data:u1oQaLWB,iv:9MYtMaC37+36SY6If3eqOQNtnZExpws4swc2hhDJ9rg=,tag:j9cNu1LtfcrhtD4r1jdKgQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:vr1+2Hnl,iv:4avS0LtzfNQxy9Ejq244u9HN+73LXgtxNjz2VqMPE/8=,tag:RfqyZVd6VIlphqSxVGi7dQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:jWJQfRZG,iv:lq9zfO3dae6/WHsmsIdUp/CIASC4PrMxmZx32Ca8vx8=,tag:LC045GDg4pzwF44STIXYgw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWdGJPQUU0VEtXdXYwaC9t
-            czdidXJnRWRHN2VPNTRMd3NBRnp4eFBwOTNrCnFrcTMzbmMwWWhCOTR0NTlQQTRP
-            ZFF5SkU3WmNtSkl2NGEzbHVnK2hnR1EKLS0tIDdpL2J6anJIeHlldENubHNucHFK
-            OVMzVDVBOFFBVE1Vbjk0Z1BUdHFDY3cKQXwvZtFQH5YNKjbaQue5cC6xXPC7A8Vk
-            ZcTPLN9M+Mlqk3MQysZKr72/ffE3Tqfl9QhuiTP+q4zs5l/zg3+bAg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzQlQ4ak9uZEdyU1FINjlj
+            OXNLVDhnQ2x6Y1cvWjU2ZWwxanhHWVJDQW1RCmJqQ04wV0Zoa0RQanZoS0d0d2p1
+            emxDc202OFdWb2E2OUhsMzhQZVZUTGMKLS0tIEhoUVdORFlrNWFTUUd5bE1xaUdM
+            MGVUeUJENzZ2aXdnMXRkWCtLSHVzM2MKI4ddlSzLupzvJFA4tAw8T/NKPAiweZy7
+            yyJZyafDJEJVJeK0Vvb/eY8+fjtOTgO0SELbPZlQnvZTRMF3PZD18Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-05T12:31:37Z"
-    mac: ENC[AES256_GCM,data:XvgE+wRoFq+AU9QMxCBSMaNYeDenMuBAtYecpmyoYTmF9FLCrdQWPzRs/UrCwMKoKDKZFr2vpp54Ba7a+hk5Dh4sGSkAwzAO7BSZ6/PKqkjcmvp0fanQPZz5rkiPzb+FYlTiqs/oOqB9Sv4btmNASE91XTbIlu0YXwo/fXxSSz0=,iv:qhpJCq/E7qVFX8cxJfQvPBjWPAjS70YVFa5qtwb0IgE=,tag:t1IPIg/2ZOEAF7bIWakrGQ==,type:str]
+    lastmodified: "2023-02-05T20:25:07Z"
+    mac: ENC[AES256_GCM,data:UrNQla8Fim2HlPaZvcz8o/G77q5EYpN9tYP3xSS1c8vA7EmE9TEKuWfzFT9hvF8LZCrr3rL4q4ari6ubEStNg6VCnt3fp85ZPcu4ttQzKuZANbu2vuQzn1oCpqS/WWtfcKvdUY0zUGoGuW6VqfKBIFTthDlJjDv5foYzeblJXeg=,iv:ZtZwuACkdkmgNbzFEb6+gCW7nXd7elpveuMpbbEj3K8=,tag:KQYLb+FeN0QspHk+4sXf6g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
