--- a/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:tbIaVaXU,iv:Ydhu38tJhqvOEcft6K40Y7YyKREErXyCgfDeupZwb/g=,tag:KmktLriq/xGDQpRduhqAEQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:c4LecA3p,iv:g+U6gsx/izCG5Guj6EeOuyBU1gmnP5v601OUqWsIDxg=,tag:o08qVQqTJDs8tC6UqU9Q7g==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:lkaNggZS,iv:twVuC2689avT5isHi8/Gh0Cul41gSONZlY+gkvqBKFc=,tag:ORQ6LBwX4IvY/XBFxomsJQ==,type:str]
+kind: ENC[AES256_GCM,data:uZ9YoOy6,iv:qIyHMdNqFgYf1oz25x/avd+oJpx/ZTfz9sqDARWGg58=,tag:LIzCgs5Ww7+IZnud7PrTyA==,type:str]
+ansible_user: ENC[AES256_GCM,data:BluFH21M,iv:v6zXhZALU+1mNS2WUkjUJbWyhO9NdV1EH3/2vL/rZMo=,tag:MKVz3frG2lt8EquSemYg3Q==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:XcXuoyaM,iv:JeVWBxebsfh5q0mG0cYeOHypMZ5ZalXFGW1GsMEZSw0=,tag:d7KPIh20AvCOENeyN2JH8g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYcjBCZjMvRU5jb2JwUEFn
-            S24wWVliYndHVnRROTdOVC84TXRaWC9yZ1JZCnNPdnhpRE10Q2llZjhpTWU2bkE5
-            U0JKRVhpeW1Od3JWTkR3eUVVMWdhcTgKLS0tIDNkUktiNzVqN1ljc1d1eHZ2UklL
-            RkxtVWJoNyt5K3JES2dQb0l4amQzZVUKlr2Y8Q1IuDQX8OvlhFHW+DqgMPQpEy43
-            ZkGY7jYSdBYDKda5q6xNN/PQLGGCyv75DcAkD0cXCtX/C1T9N8ymVw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOVWpQUlh6YWYvRUQ5Tkw0
+            KytUUVJOOTZIVGJWaVV2SDhpZWFGbFVYcUIwCmdkVHNRK25hV3c5R2VOMXFDdi9F
+            OXQ4VUhQUVEwN3FubVVyRHRabncyOVEKLS0tIGlnWmNEY3krNk5IV05XV3RzcWtW
+            V2VkbDFFWXozRHJXZjkzZnczbFgyMDgKfTs/DFF5h5pzGwuPThYTMyH/6qKCPz32
+            22vncle15G0r1eks2gjRhpgUg8yJ8sMSYl7YrEuhAj45fJ5Zqs15Mw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-05T12:31:37Z"
-    mac: ENC[AES256_GCM,data:Z2O0hEbnulRS4UN9cmsLmEohYU4yXLSHZdnmRi/V9Cdz4CprwIXlzSmv2cXkpyewxR8mrOArJ1JnVH0egx797pJbctu+ffgKS3h0aC/qwJNwYNsd1iduE43Qc6aNYar9cOES9dSQAdpWBxJz++//iNgFkYgNwRKysmEP/fm7Sa0=,iv:S24G3GtdgQYIVlCOq5fJWtKvjfvGk9dGLX19DkUhB6M=,tag:VWEuPRQ2q8jK4f2BHTvEIw==,type:str]
+    lastmodified: "2023-02-05T20:25:07Z"
+    mac: ENC[AES256_GCM,data:Tng6O4wD/FVJ6lTBMInQx2dcL1LPf96gf2zq9GtkPkwhpZEZDNWv6dpUbU8Myi4l+e52n/EtqwPa2McuhkTRN0D8z5mJtasuryVYlqByoaLUZkXvfs8tweh/UN1P3dx0zKuY72WoKYg6fYCQcXZhbwBAPgwNa2FjrtEuGhB6c1k=,iv:cb8Ttx+zR12lxqiqpvmR7SRXvNPa5q6c+Xw0XDsZ1Ik=,tag:4pIs1/dvO51rONVx9zQTeA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
