--- a/kubernetes/apps/storage/longhorn/app/kustomization.yaml
+++ b/kubernetes/apps/storage/longhorn/app/kustomization.yaml
@@ -3,4 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: storage
 resources:
+  - ./diskconfig.yaml
   - ./helmrelease.yaml
