another cluster deploy

--- a/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:au91Z5mn,iv:k5rWy3NQaJrSvloI/yRutrUT7SV1b4ZaiL2nGlBsVwQ=,tag:eAKLCFT1PodbMei7e8JBsg==,type:str]
-ansible_user: ENC[AES256_GCM,data:65JiPu0m,iv:/WvC3j/KGTme5cVGTQKzku3Gf9IFZN0BLeZmxRR+Zbs=,tag:UG1PyjGmqDysaqoY6J2awg==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:gaCubpHJ,iv:sUtj1La/33ovBEQbRaPkQgmdMmoiQUEfhCjhmZUjQoI=,tag:3LxGz+K56OSgvxHaf2Q9Bg==,type:str]
+kind: ENC[AES256_GCM,data:SX9XENJk,iv:5sf4S0mEQfW9lw8lecmb4r3DPNvw3ImMpnAw7S/YVJo=,tag:CfNZfl6dMR04PwPW2Thu0g==,type:str]
+ansible_user: ENC[AES256_GCM,data:fpR6Ks8M,iv:t8Fu6DJwUSn/P+GdTbQ3Ym6kTLJ1RSUOpbsOzGAIqe4=,tag:5UmhRpBbtdRuT0Zj6nTbmw==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:lmeGzvu5,iv:5r3pmnZBcc8Rv6X4QEJvcbLcn4jAeb8HH3P0j5swVo4=,tag:LfmxBQQm+7iBPDglhi+u4g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvSHoyNzVzSzFOTFpMUk0z
-            enlXZ2NRQjloQmZQbStwU1Q1MHNESXFWSHgwClo2Nno1cS8wM1VEMnBtRGYrNmhO
-            ckgvQmpVRWlkRlNKWFRqdndzcnoxNDgKLS0tIGFyVXFjQU45VmFoOUJHQ2F1MVhX
-            bktVai9JbktlRDhBZjM2VHFlT2hUajgKKCF2m5zLqS9iDlA2oOs2wI4pmGd0H+yP
-            +rg9DWE4u9sLuTee30Pk2cJbLKvnlwik4ncMuVJjBhfzpGCaKGG9Eg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQN2UzYzZLZ25CSU1wODdk
+            UUFPK2hUUklNWGhTV0lqRWdlbjZpSlJob2hrCnJxVUdVNGRqWnBwT2NXRHpDSmlo
+            YitONjhnZ2pPa3RmK1N3TEhyN1k4WE0KLS0tIDYyK3h4VGdWUGwvMjJUOG16dlVI
+            NnNtcEsycCt5RWtScU4rbmhac093QUUK/loRn+L8ehN2Xoj3HEsuDVs80NUN+xHO
+            Vp4WhMel/JXlXY276w78DW9Ppbt8eLyglMWU0kxt9VwmtOAmiPRMjw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-05T20:25:07Z"
-    mac: ENC[AES256_GCM,data:MhH0my+bt2kEsdRgZHPM2OFv2ALfQr+2+kLO2YGqNBwmkM/ZDDnaOv4tgbbrpsEgJeWM7pI5JgrD19FJv+NmEt8o90rXW6aXtKMVn8DTiyJTR1udbQTVDeaowtuiEvhYOCQ8a8FYOdoPDbccZKdEbcDvpJlbA0oD6iAVZiejizM=,iv:2+oDxloqvrAwjL/lgU533PpnJpCXiXKA3AKuIkw8ZeY=,tag:OwjyizgUyWrgFliEOvqcRA==,type:str]
+    lastmodified: "2023-02-07T21:28:52Z"
+    mac: ENC[AES256_GCM,data:EeBnOWZ2lAMdAv99rjm8PFYc38LEvYd15U+iod0JabBHOU+xWFfKMmER7QtYrGMkpZXJ/xLvJxe84g06E2vJRgyc29bmI4SAePlwYXUDt4tXm+nNxSvyZLa5YYQgTFQRKPorOwBRBSGpueVtJhc90SnDKjy4V5INn4PR9rbfEqA=,iv:wIsBLrc2ySf5o3Y13P8l9yPxrvkgxFl38YWWq4/c1WY=,tag:7XNQug9qxYE0JDYmq5QaUQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
