--- a/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:XUGvYEaX,iv:ANpX77UA0y3CbRoHFgzWEM9mzHpA6HVwpYuQhB+Riq0=,tag:h1sH8pFWb1W+J78Ds4ku9w==,type:str]
-ansible_user: ENC[AES256_GCM,data:F+ourj71,iv:fZtdD/8ogCH1Afw5OgCJXrMrH7WIGHFg6ZGfJKKh4Cs=,tag:uUbgBHnB48fkQZL0uzyZIg==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:9wR9r1Ii,iv:xYFAU0NXKW/1otBQl2mreikwUE8tcBi46wso9wBRTnw=,tag:NIKnvBGU6kRwwEqQjzNyHQ==,type:str]
+kind: ENC[AES256_GCM,data:GV/jK2Qk,iv:NwYr55TVcuDKFNkSe0a8sbrgJwJgeYhTW81s0Qfmztc=,tag:+viD3QhGMFLmCSPF3yomGQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:cD40ocZ1,iv:RMSl/20SRQKiOZ+jT+FHbsp0/++VvwfyV1s+WJ5HOB4=,tag:3OkJ0B3M9m0c2R44yvKZKw==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:RUI7lvoK,iv:bcJOzroCvccliFRafiJ41dKTZGJaXuxeLhbkRroKB8A=,tag:1xgydceE/O6IWrGffEWOww==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjMXlHQzZyUitkZkZFNDJY
-            Zkh0eTZkVGFQVnBzQWZqdmIvMUYyamJVbXk4CnBIOEcwYU80K3RlbG91dVNsK1Q5
-            WGVSUCt0WVBpeGorMFpHb3JjT1BEMFkKLS0tIFk4R0RRSDR5N3FtK1g0SzE5MzBP
-            djZPaUJWa0VQOURGMWRQbW1lU0xWZEkKxdSAo4vNiNn8KzGpdjdvKcUBkwPcc/ff
-            Ztv8fV0rNMujJQwdZH8jn2al8B+8S/cHzCL3cKSItslre/CDlXf97A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBya0hCTkN6Qk1MM01FeW9N
+            eWNKNEU0Y2l0MHNlbEl0eGtGVDgzUDBkclg0CnkyMTZockFtUnR0eDlWWkJiMXV2
+            MDNyditqcW5DQ3lNZ0tTdnRmWDQwK1kKLS0tIHdCUTl2WWtXUkJ1cUxEMW0wMGhF
+            QXVxUm5iYW1laS8yeXRIaXF6bU8rdlUKjdss+l+ZDLuNOL41SOxInJRgEK63oDd4
+            s8B8oxdzDgWrFd8ysFGva8+a3LOIjekY3Tjr5hyqjk5vzGu2KEl8sg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-05T20:25:07Z"
-    mac: ENC[AES256_GCM,data:ttPgJhAW+XnOwiuklwo6w4h0PhCi0Hh7rylxGnh+2NCOzxRR16GKxf91ZugWmvIt+o7mXZzCqPuiADqcatCQX5dUp2jRWYeH7UhB93AsFGc5JhapfwlWu4aqd6aDD8+QomQ8rzkyw9cxwFgKaHsVGqZbkUfLibLRZepcJ+1pixE=,iv:f4zBx+7B5gtHWef3mBHS6NVU8bOAmh0s8BLbggpecaM=,tag:KZzWjNo56zfWmna0CdBOzA==,type:str]
+    lastmodified: "2023-02-07T21:28:52Z"
+    mac: ENC[AES256_GCM,data:OYKkkRoUsgzpzseTfgBClTYW8RzRDvjpdmdEiUNEATZ9/pasELQxo4Rs6Gd8nSOoTlzGZof87eNpvUCsvflNGYns0fotNSqrdMUwfGfQKlU5YsxMIhb8rLfcLUB2zLZ7kosi1SIJM5X6T2OtUQhGthQPTUIe39g/+pYKHzhhaYs=,iv:jPVQaen0bsGvuQSUWr/LEEberTvSwsvd/XFxwUEYUfQ=,tag:sB8AJw4n35yXbFT+bXjoJA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
