--- a/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:uZ9YoOy6,iv:qIyHMdNqFgYf1oz25x/avd+oJpx/ZTfz9sqDARWGg58=,tag:LIzCgs5Ww7+IZnud7PrTyA==,type:str]
-ansible_user: ENC[AES256_GCM,data:BluFH21M,iv:v6zXhZALU+1mNS2WUkjUJbWyhO9NdV1EH3/2vL/rZMo=,tag:MKVz3frG2lt8EquSemYg3Q==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:XcXuoyaM,iv:JeVWBxebsfh5q0mG0cYeOHypMZ5ZalXFGW1GsMEZSw0=,tag:d7KPIh20AvCOENeyN2JH8g==,type:str]
+kind: ENC[AES256_GCM,data:mhKvOG6c,iv:Pj9OoqGsN2gQ3CHKuNXQi1REJEoX6SKl/8IdKLcOopg=,tag:vMtMaxYGt3S/gPIteCcLEQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:3YRZ/KzP,iv:BCBJ4OyU8Gco+qcsTpF/vs1AjgtoRthdxuD9+X3wntM=,tag:6uyYMiv/co5zIAdjNOWJGA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:sWrVPd9F,iv:NynvtklkycYDEoo6CMY1ucWQ7BMIO1x1vF+skma6w5U=,tag:erx2cMu3yTTE3Puarf3r9Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOVWpQUlh6YWYvRUQ5Tkw0
-            KytUUVJOOTZIVGJWaVV2SDhpZWFGbFVYcUIwCmdkVHNRK25hV3c5R2VOMXFDdi9F
-            OXQ4VUhQUVEwN3FubVVyRHRabncyOVEKLS0tIGlnWmNEY3krNk5IV05XV3RzcWtW
-            V2VkbDFFWXozRHJXZjkzZnczbFgyMDgKfTs/DFF5h5pzGwuPThYTMyH/6qKCPz32
-            22vncle15G0r1eks2gjRhpgUg8yJ8sMSYl7YrEuhAj45fJ5Zqs15Mw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArRHp0WlZLek9URDgzM25L
+            eTRKeVY0cWN5ZEZHVlpVTlJ4QnhuWUxNaEJnCmZkK2ZCN3NxbGk5aVZJU3JBeE9H
+            b3V6OEt3KzZXcm5zMjByek1tVVVxdG8KLS0tIFFUK3Z2a01wZzVGV1JTN2tORjAv
+            aWtHQ2N6MWRFUDV2NytlV1ZTZXRwR1EKEfNA1v7ZwAEP1fzc948m0d8snBJRsTi8
+            vSVLx21CLApKFrlXI1gIEzCN5q8quevOVXmdpA6f8X4bNGx6q3xRcg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-05T20:25:07Z"
-    mac: ENC[AES256_GCM,data:Tng6O4wD/FVJ6lTBMInQx2dcL1LPf96gf2zq9GtkPkwhpZEZDNWv6dpUbU8Myi4l+e52n/EtqwPa2McuhkTRN0D8z5mJtasuryVYlqByoaLUZkXvfs8tweh/UN1P3dx0zKuY72WoKYg6fYCQcXZhbwBAPgwNa2FjrtEuGhB6c1k=,iv:cb8Ttx+zR12lxqiqpvmR7SRXvNPa5q6c+Xw0XDsZ1Ik=,tag:4pIs1/dvO51rONVx9zQTeA==,type:str]
+    lastmodified: "2023-02-07T21:28:52Z"
+    mac: ENC[AES256_GCM,data:zd1ZhadIWPwifBRbKvP7bs/UZ14WCna6pnsf8ITOaDS0AnMf71cOq7PA2Yw6sxWDQfxac+hJnLDRm2vBvHjUZdUJ5aY5oys0xgc+YwWIpJFteL8YgAj+74+mTquewCMv5jHePVYurvgEA2alAbeG2gd8B6mqG9j89BuKyFkEIJo=,iv:BK/KEeyoc8q6x7HYF1JALPQRgl1JQuxFm67A7onO8Ek=,tag:NA5fCwk9iNwrATNMcBdujw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
