--- a/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:u1oQaLWB,iv:9MYtMaC37+36SY6If3eqOQNtnZExpws4swc2hhDJ9rg=,tag:j9cNu1LtfcrhtD4r1jdKgQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:vr1+2Hnl,iv:4avS0LtzfNQxy9Ejq244u9HN+73LXgtxNjz2VqMPE/8=,tag:RfqyZVd6VIlphqSxVGi7dQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:jWJQfRZG,iv:lq9zfO3dae6/WHsmsIdUp/CIASC4PrMxmZx32Ca8vx8=,tag:LC045GDg4pzwF44STIXYgw==,type:str]
+kind: ENC[AES256_GCM,data:j5oUQ+ho,iv:xyx7YYrD9N86RbqJVYtPIObEX1BBB27BuMqsbzVOK54=,tag:YvujNIui7bUdMuTHdGUZxw==,type:str]
+ansible_user: ENC[AES256_GCM,data:nMeROD+X,iv:OOiPcnVBK+nVr6W7CeLgM+8zJ90v4ADOuDSIYMQqRz0=,tag:fDUZfDBcyK4Wh1IJHLC+jg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:pfCI8pa/,iv:neoEgMJDBe5k2gl9+3vgX+fVYJ93VYA/yYhMHstLxng=,tag:nK5MshchUX2am36DRJrjUQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzQlQ4ak9uZEdyU1FINjlj
-            OXNLVDhnQ2x6Y1cvWjU2ZWwxanhHWVJDQW1RCmJqQ04wV0Zoa0RQanZoS0d0d2p1
-            emxDc202OFdWb2E2OUhsMzhQZVZUTGMKLS0tIEhoUVdORFlrNWFTUUd5bE1xaUdM
-            MGVUeUJENzZ2aXdnMXRkWCtLSHVzM2MKI4ddlSzLupzvJFA4tAw8T/NKPAiweZy7
-            yyJZyafDJEJVJeK0Vvb/eY8+fjtOTgO0SELbPZlQnvZTRMF3PZD18Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIS2UyL2VkWE9nRTdwYlRi
+            U2JGMEZycGNFMVZ4eG0yLzNNeWlXb2NlRFhVCnpycHlpa2pnQVBsYUc0djE2aEM5
+            QzBZNmpoYzZtaVVRbnFWSURLU1Zuck0KLS0tIGtzenhVYWdmYnl3eXNBRTBWMUxp
+            UHNKcHJyT1JxRkFnVDdVTGhDZmliYm8KldlXqgCSHmjM+KWoZxtqX/p3PykruqTz
+            5UYvMvoaHpCCaRgaPdBTKz+SDxV4qM6YiRQ362xCP0y1DzZOUes+Wg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-05T20:25:07Z"
-    mac: ENC[AES256_GCM,data:UrNQla8Fim2HlPaZvcz8o/G77q5EYpN9tYP3xSS1c8vA7EmE9TEKuWfzFT9hvF8LZCrr3rL4q4ari6ubEStNg6VCnt3fp85ZPcu4ttQzKuZANbu2vuQzn1oCpqS/WWtfcKvdUY0zUGoGuW6VqfKBIFTthDlJjDv5foYzeblJXeg=,iv:ZtZwuACkdkmgNbzFEb6+gCW7nXd7elpveuMpbbEj3K8=,tag:KQYLb+FeN0QspHk+4sXf6g==,type:str]
+    lastmodified: "2023-02-07T21:28:52Z"
+    mac: ENC[AES256_GCM,data:EZpvnqk0exjjOKCCNrce0EU4+byUNyWw4Tn4NhFoSlcEFE2xZ38Wg+1HRttY/jkbUYru7F520r2sUdJ/tjJAD02fHXbo9oJjT9iiN2/z1nj2ux3ADbhyZwNQ8G12Ly4oimQfaABp8U81NQKKX3+1Vmyxx2B5VQ3nhoeUnkeVdh4=,iv:H9KTCQN9sTwSy/ST6vft2m8I8pWabq8Y/r6pzqbpr6I=,tag:hg3JqeauoA7IkFJjroJltg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
