--- a/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:qczePDfr,iv:bdeYtN26+73waq4RYQz/I2b1NDve5qcbk4GD8wsV2K8=,tag:NRAv4LS0G6dZ93x28tSoNg==,type:str]
-ansible_user: ENC[AES256_GCM,data:SWWMUAmL,iv:uYYZlaM8LHMWJNo574sbRpm6duBvwESS1NQFGb5/AMM=,tag:YAzXdl4F8zVuNaqg2g3/ZA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:k5vfqpc4,iv:p+TVhXC1sg31kI0lZonWiy333tDsPcD0Y5FFhncAeX8=,tag:kGS0kiYhbXT2GpkYiwJX0A==,type:str]
+kind: ENC[AES256_GCM,data:J2NjtWhB,iv:doBkVIbZL3n6H+ub6/TQc94ZUK7kBwL2b/eudjldNXI=,tag:d6dPrb9EdaB0kZdtE96v3w==,type:str]
+ansible_user: ENC[AES256_GCM,data:8SbuD7EC,iv:UtbDOdjeWuw5hM5q/5HNXjEhZm3q9Dic+YsRZcMYhQM=,tag:iW1NQ71Z60xeLGtV53bYlQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:+eBrN2EU,iv:RIJrvjl6VFxjCbPlHIEOwUtBb0ln8repwYei2q/lzD8=,tag:8TeRm/sBZnJRSSmHWzdBSw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXa1U5S3lYMlNOYzlYd2w5
-            TzAxRHZtcWV6VE9EVVVCdDQyVUl0emNtWEF3CkxQWWF5WmttOWt6dWJjVXdZQUVq
-            K1FyOFYrcFpmb0tvVXhnMkpXRWRaTjgKLS0tIFVpRnY2MGZod3NXZWN5bklVVVds
-            VXB6V0NVWTdpdHAzRnI2NFVVeUN3ZHcKp2xSqHGC952TYIB9HisSJIk3mdaVUE9p
-            cUyTrItIO996grjq6a04E6Zhcpv59LAxzEiFHLkZtvR++h/TgFH83g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4aVNLODJSekUwQkNZR1hk
+            Q2ZVODJrVDBGd2thZmJYLzhpVXR4d2VsbzFZCnAwalZ0WHNra3gyQmZhd2Z2Z0Vq
+            dnRFSW1pZGVrZGlKWFVaRDVIMU5MbTAKLS0tIEJLTDFLcldKWUdTM2E3MDIvN01v
+            TzJ2YmRXL0U0enV2OE5VL0ZtdlNKTkUK7lm6aEeOPoU7di2R446a7b9IQDPczkj4
+            qG7CpdNwe+KNnLUASnx9VXOt08frt6D8xn9y2G7GBluaYyOXST6txA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-05T20:25:07Z"
-    mac: ENC[AES256_GCM,data:KS20U6H+DvXIyp/N0hZVGP8bBJWunmh5wBP0d2d2RYhfnhD/nwptGaxLVqDIW5el1IO7PJmcXI0RnTUNRpPb/OPRuVZvfI6Q1kvkdUTgpNqHM9gMtiF8weSNGhQbLTyTxKOQGfS0Qd80DnNpcgcwr13nWvbgxFcA9daqTxEfkXE=,iv:4H0NfFLZHamMD1sLBkhC2OtNPppuAVxNJukQWjk2mCw=,tag:pov8DIneHs49kd8GTl/YkQ==,type:str]
+    lastmodified: "2023-02-07T21:28:52Z"
+    mac: ENC[AES256_GCM,data:XjJy0L4XHshwgk+nyT8IvrIR228OI4hUPr1WfD7wv/UlGHxqDscXYneJVd01foi2/7ARtBsl1SVsXx/MMB9tQSMOofG3YcEO6goCUfDaL8PYxV9X6ckOnZtRB0oUAD7ofLlkPpOd1iyb80VnWxIc60619gvvWTOJbf7u7KpBnyg=,iv:SW1ntmjMsv8wqrhBUnr8nUXqwAWrDVaqDCfystbTp9s=,tag:fTlgrSYjgpfw5wG+GDlvMQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
