change home automation helm config

--- a/kubernetes/apps/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/helmrelease.yaml
@@ -15,20 +15,16 @@ spec:
         name: k8s-at-home
         namespace: flux-system
       interval: 10m
-  test:
-    enable: false # Enable helm test
   install:
-    remediation: # perform remediation when helm install fails
+    createNamespace: true
+    remediation:
       retries: 3
   upgrade:
-    remediation: # perform remediation when helm upgrade fails
+    cleanupOnFail: true
+    remediation:
       retries: 3
-      remediateLastFailure: true # remediate the last failure, when no retries remain
-    cleanupOnFail: true
-  rollback:
-    timeout: 10m
-    recreate: true
-    cleanupOnFail: true
+  uninstall:
+    keepHistory: false
   values:
     image:
       repository: ghcr.io/home-assistant/home-assistant
