--- a/kubernetes/apps/home-automation/mosquitto/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/mosquitto/app/helmrelease.yaml
@@ -14,20 +14,16 @@ spec:
         name: t3n
         namespace: flux-system
       interval: 30m
-  test:
-    enable: false # Enable helm test
   install:
-    remediation: # perform remediation when helm install fails
+    createNamespace: true
+    remediation:
       retries: 3
   upgrade:
-    remediation: # perform remediation when helm upgrade fails
+    cleanupOnFail: true
+    remediation:
       retries: 3
-      remediateLastFailure: true # remediate the last failure, when no retries remain
-    cleanupOnFail: true
-  rollback:
-    timeout: 10m
-    recreate: true
-    cleanupOnFail: true
+  uninstall:
+    keepHistory: false
   values:
     addListener: true
     service:
@@ -35,7 +31,6 @@ spec:
       loadBalancerIP: 172.16.2.122
       annotations:
         metallb.universe.tf/allow-shared-ip: "home-assistant-172.16.2.122"
-
     ports:
       mqtt:
         port: 1883
@@ -43,7 +38,6 @@ spec:
       websocket:
         port: 9090
         protocol: TCP
-
     persistence:
       enabled: true
       accessMode: ReadWriteOnce
